Fix bottom padding on mobile

--- a/style.css
+++ b/style.css
@@ -256,6 +256,7 @@ nav li a[data-page="installed"].selected {
     main {
         width: 100%;
         left: 0;
+        padding-bottom: 3em;
         padding-left: 5%;
         padding-right: 5%;
     }
